@@ -1838,15 +1838,15 @@ using trompeloeil::ne;
 void test()
 {
   FileOps ops;
-  
-  trompeloeil::sequence seq; // sequence object
-  
+
+  auto seq = trompeloeil::sequence; // sequence object
+
   int handle = 4711;
-  
+
   REQUIRE_CALL(ops, open("name"))
     .RETURN(handle)
     .IN_SEQUENCE(seq);
-    
+
   REQUIRE_CALL(ops, write(handle, ne(nullptr), ne(0)))
     .RETURN(0)                                         // indicate failure
     .IN_SEQUENCE(seq);
@@ -1857,10 +1857,12 @@ void test()
 
   REQUIRE_CALL(ops, close(handle))
     .IN_SEQUENCE(seq);
-    
+
   test_writes(&ops);
 }
 ```
+
+Sequence objects are moveable but not copyable.
 
 **NOTE!** The [**`.IN_SEQUENCE(...)`**](#IN_SEQUENCE) macro accepts many
 sequence objects.
